--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,10 @@
     ],
     "permissions": [
         "scripting",
-        "storage"
-    ]
+        "storage",
+        "tabs"
+    ],
+    "chrome_url_overrides": {
+        "newtab": "newtab.html"
+    }
 }
